# YTlearning

./: .gitignore
learn1.o/: .env.example  README.md  main.py  mcp_servers.json  pyproject.toml  readme.md
learn1.o/src/: agent.py  config.py  github_tools.py  mcp_client.py  mcp_server.py  visualize.py  voice.py
learn1.o/tests/: conftest.py  test_github_tools.py  test_visualize.py
